добавил два отзыва, поменял пути к отзывам, добавил строку навигации по сайту

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,9 @@
 <div class="links scroll">
 </div>
+<div class="links scroll">
+        <a href="{{site.baseurl}}/">Главная</a>
+        <a href="{{site.baseurl}}/cases/">Отзывы</a>
+</div>
 <!--
 <div class="links scroll">
         <a href="{{site.baseurl}}/">Главная</a>
