Отредактировал отображение отзывов, исправил орфографическую ошибку

--- a/_layouts/case.html
+++ b/_layouts/case.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 ---
-<h1>{{page.title}}</h1>
+<h3>{{page.title}}</h3>
 
-<h3>{{page.description}}</h3>
+<b>{{page.description}}</b>
 
 <p class="meta"><small>{{page.date | date: '%B %d, %Y'}}</small></p>
 
