Отредактировал описание отзывов, поменял имя с картинки на обусфакцию

--- a/_includes/contacts.html
+++ b/_includes/contacts.html
@@ -10,11 +10,20 @@
       <td>Telegram:</td>
       <td><a href="https://t.me/IvanBekNNO" target="_blank" rel="noopener noreferrer">@IvanBekNNO</a></td>
     </tr>
+    <tr>
+      <td><span class="rev surname">ер</span></td>
+      <td><span class="rev firstname">а</span></td>
+    </tr>
   </tbody>
 </table>
+
+<!--
 <img src="/b.png" alt="bek" height="16px"> <img src="/i.png" alt="ivan" height="16px">
-<!--### Контакты:
+-->
+<!--
+### Контакты:
 
 | Б | И |
 | Email:    | [ivanbeknno@gmail.com](mailto:ivanbeknno@gmail.com) |
-| Telegram: | [@IvanBekNNO](https://t.me/IvanBekNNO) |  -->
+| Telegram: | [@IvanBekNNO](https://t.me/IvanBekNNO) |
+-->
