Вернул картинку вместо обусфакции - не работало на github

--- a/assets/css/_sass/style.scss
+++ b/assets/css/_sass/style.scss
@@ -172,8 +172,10 @@ blockquote {
 .scroll::-webkit-scrollbar {
   display: none; }
 
+/*
   span.rev { unicode-bidi:bidi-override; direction:rtl }
   span.rev.surname:before { content:"вен" }
   span.rev.surname:after { content:"еБ" }
   span.rev.firstname:before { content:"н" }
   span.rev.firstname:after { content:"вИ" }
+*/
