--- a/_includes/contacts.html
+++ b/_includes/contacts.html
@@ -16,13 +16,21 @@
 
 
 <img src="/b.png" alt="bek" height="16px"> <img src="/i.png" alt="ivan" height="16px">
+<style>
+  span.rev { unicode-bidi:bidi-override; direction:rtl }
+  span.rev.surname:before { content:"вен" }
+  span.rev.surname:after { content:"еБ" }
+  span.rev.firstname:before { content:"н" }
+  span.rev.firstname:after { content:"вИ" }
+</style>
 
 
-<!--
-<tr>
-  <td><span class="rev surname">ер</span></td>
-  <td><span class="rev firstname">а</span></td>
-</tr>
+
+  <span class="rev firstname">а</span>
+  <span class="rev surname">ер</span>
+
+  <!--
+
 -->
 
 <!--
