--- a/_includes/contacts.html
+++ b/_includes/contacts.html
@@ -10,12 +10,9 @@
       <td>Telegram:</td>
       <td><a href="https://t.me/IvanBekNNO" target="_blank" rel="noopener noreferrer">@IvanBekNNO</a></td>
     </tr>
-
   </tbody>
 </table>
 
-
-<img src="/b.png" alt="bek" height="16px"> <img src="/i.png" alt="ivan" height="16px">
 <style>
   span.rev { unicode-bidi:bidi-override; direction:rtl }
   span.rev.surname:before { content:"вен" }
@@ -23,14 +20,19 @@
   span.rev.firstname:before { content:"н" }
   span.rev.firstname:after { content:"вИ" }
 </style>
+<table>
+  <tbody>
+    <tr>
+      <td>
+        <span class="rev firstname">а</span>
+        <span class="rev surname">ер</span>
+      </td>
+    </tr>
+  </tbody>
+</table>
 
-
-
-  <span class="rev firstname">а</span>
-  <span class="rev surname">ер</span>
-
-  <!--
-
+<!--
+  <img src="/b.png" alt="bek" height="16px"> <img src="/i.png" alt="ivan" height="16px">
 -->
 
 <!--
