Поправил опечатку в фамилии

--- a/_includes/contacts.html
+++ b/_includes/contacts.html
@@ -16,7 +16,7 @@
 <style>
   span.rev { unicode-bidi:bidi-override; direction:rtl }
   span.rev.surname:before { content:"вен" }
-  span.rev.surname:after { content:"еБ" }
+  span.rev.surname:after { content:"кеБ" }
   span.rev.firstname:before { content:"н" }
   span.rev.firstname:after { content:"вИ" }
 </style>
