--- a/assets/css/_sass/style.scss
+++ b/assets/css/_sass/style.scss
@@ -164,6 +164,7 @@ blockquote {
 
 /* Horizontal scrolling navbar. From: https://is.gd/WuJxqy */
 .scroll {
+  font-size: $big-font-size;
   white-space: nowrap;
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
