поправил ссылку с t.me на telegram.me

--- a/_includes/contacts.html
+++ b/_includes/contacts.html
@@ -8,7 +8,7 @@
     </tr>
     <tr>
       <td>Telegram:</td>
-      <td><a href="https://t.me/IvanBekNNO" target="_blank" rel="noopener noreferrer">@IvanBekNNO</a></td>
+      <td><a href="https://telegram.me/IvanBekNNO" target="_blank" rel="noopener noreferrer">@IvanBekNNO</a></td>
     </tr>
   </tbody>
 </table>
@@ -40,5 +40,5 @@
 
 | Б | И |
 | Email:    | [ivanbeknno@gmail.com](mailto:ivanbeknno@gmail.com) |
-| Telegram: | [@IvanBekNNO](https://t.me/IvanBekNNO) |
+| Telegram: | [@IvanBekNNO](https://telegram.me/IvanBekNNO) |
 -->
