Добавил страницу про мероприятия /life/, фотографию загрузил; в css поменял чтобы был перенос строк в панеле навигации;

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,6 +3,7 @@
 <div class="links scroll">
         <a href="{{site.baseurl}}/">Главная</a>
         <a href="{{site.baseurl}}/cases/">Отзывы</a>
+        <a href="{{site.baseurl}}/life/">Живые&nbsp;мероприятия</a>
 </div>
 <!--
 <div class="links scroll">
