--- a/assets/css/_sass/style.scss
+++ b/assets/css/_sass/style.scss
@@ -165,10 +165,12 @@ blockquote {
 /* Horizontal scrolling navbar. From: https://is.gd/WuJxqy */
 .scroll {
   font-size: $big-font-size;
-  white-space: nowrap;
+  //white-space: nowrap;
+  white-space: normal;
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
-  -ms-overflow-style: -ms-autohiding-scrollbar; }
+  -ms-overflow-style: -ms-autohiding-scrollbar;
+}
 
 .scroll::-webkit-scrollbar {
   display: none; }
