добавил элемент navbar в css, чтобы сделать панель навигации без прокрутки во всех бруазерах (не уверен что поможет, до этого появлялся скролл в фаерфоксе на телефоне)

--- a/assets/css/_sass/style.scss
+++ b/assets/css/_sass/style.scss
@@ -175,6 +175,11 @@ blockquote {
 .scroll::-webkit-scrollbar {
   display: none; }
 
+.navbar {
+  font-size: $big-font-size;
+  white-space: normal;
+}
+
 /*
   span.rev { unicode-bidi:bidi-override; direction:rtl }
   span.rev.surname:before { content:"вен" }
