--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,6 @@
-<div class="links scroll">
+<div class="links navbar">
 </div>
-<div class="links scroll">
+<div class="links navbar">
         <a href="{{site.baseurl}}/">Главная</a>
         <a href="{{site.baseurl}}/cases/">Отзывы</a>
         <a href="{{site.baseurl}}/life/">Живые&nbsp;мероприятия</a>
