добавил в строку навигации страницу записи

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,6 +4,7 @@
         <a href="{{site.baseurl}}/">Главная</a>
         <a href="{{site.baseurl}}/cases/">Отзывы</a>
         <a href="{{site.baseurl}}/contacts/">Контакты</a>
+        <a href="{{site.baseurl}}/sign/">Запись&nbsp;на&nbsp;консультацию</a>
 </div>
 <!--
 <div class="links scroll">
