Изменил строку навигации - Добавил эмоджи в строку навигации, использование тега nobr чтобы избежать разрыва пунктов меню на разные строки, добавил пункт Заметки для блога

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,10 +1,11 @@
 <div class="links scroll">
 </div>
 <div class="links scroll">
-        <a href="{{site.baseurl}}/">Главная</a>
-        <a href="{{site.baseurl}}/cases/">Отзывы</a>
-        <a href="{{site.baseurl}}/contacts/">Контакты</a>
-        <a href="{{site.baseurl}}/sign/">Запись&nbsp;на&nbsp;консультацию</a>
+        <a href="{{site.baseurl}}/"><nobr>🧭Главная</nobr></a>
+        <a href="{{site.baseurl}}/cases/"><nobr>💁‍♂️Отзывы</nobr></a>
+        <a href="{{site.baseurl}}/contacts/"><nobr>📞Контакты</nobr></a>
+        <a href="{{site.baseurl}}/blog/"><nobr>📖Заметки</nobr></a>
+        <a href="{{site.baseurl}}/sign/"><nobr>📅Запись на консультацию</nobr></a>
 </div>
 <!--
 <div class="links scroll">
