--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <hr>
 <h2 class="post-headline">{{page.title}}</h2>
-<p class="meta"><small>{{page.date | date: '%B %d, %Y'}}</p>
+<p class="meta">{{page.date | date: '%B %d, %Y'}}
 
 <!--
 <p><table width="62%"><tr><td class="meta"><small>{{page.date | date: '%B %d, %Y'}}</small></td>
