Добавил в комментах в строку навигации задел на пункт меню архив

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -8,6 +8,9 @@
         <a href="{{site.baseurl}}/sign/"><nobr>📅Запись на консультацию</nobr></a>
 </div>
 <!--
+<a href="{{site.baseurl}}/archive/"><nobr>📚Архив</nobr></a>
+-->
+<!--
 <div class="links scroll">
         <a href="{{site.baseurl}}/">Главная</a>
         <a href="{{site.baseurl}}/cases/">Отзывы</a>
