Добавил на панель навигации пункты Архив и Памятки

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,10 +5,12 @@
         <a href="{{site.baseurl}}/cases/"><nobr>💁‍♂️Отзывы</nobr></a>
         <a href="{{site.baseurl}}/contacts/"><nobr>📞Контакты</nobr></a>
         <a href="{{site.baseurl}}/blog/"><nobr>📖Заметки</nobr></a>
+        <a href="{{site.baseurl}}/archive/"><nobr>📚Архив</nobr></a>
+        <a href="{{site.baseurl}}/memo/"><nobr>💾Памятки</nobr></a>
         <a href="{{site.baseurl}}/sign/"><nobr>📅Запись на консультацию</nobr></a>
 </div>
 <!--
-<a href="{{site.baseurl}}/archive/"><nobr>📚Архив</nobr></a>
+<a href="{{site.baseurl}}/archive/"><nobr>📚Архив</nobr></a 💿💾📀💽🧲>
 -->
 <!--
 <div class="links scroll">
