Вынес norb элементы из ссылок наружу в панеле навигации navigation

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,13 +1,13 @@
 <div class="links scroll">
 </div>
 <div class="links scroll">
-        <a href="{{site.baseurl}}/"><nobr>🧭Главная</nobr></a>
-        <a href="{{site.baseurl}}/cases/"><nobr>💁‍♂️Отзывы</nobr></a>
-        <a href="{{site.baseurl}}/contacts/"><nobr>📞Контакты</nobr></a>
-        <a href="{{site.baseurl}}/blog/"><nobr>📖Заметки</nobr></a>
-        <a href="{{site.baseurl}}/archive/"><nobr>📚Архив</nobr></a>
-        <a href="{{site.baseurl}}/memo/"><nobr>💾Памятки</nobr></a>
-        <a href="{{site.baseurl}}/sign/"><nobr>📅Запись на консультацию</nobr></a>
+        <nobr><a href="{{site.baseurl}}/">🧭Главная</a></nobr>
+        <nobr><a href="{{site.baseurl}}/cases/">💁‍♂️Отзывы</a></nobr>
+        <nobr><a href="{{site.baseurl}}/contacts/">📞Контакты</a></nobr>
+        <nobr><a href="{{site.baseurl}}/blog/">📖Заметки</a></nobr>
+        <nobr><a href="{{site.baseurl}}/archive/">📚Архив</a></nobr>
+        <nobr><a href="{{site.baseurl}}/memo/">💾Памятки</a></nobr>
+        <nobr><a href="{{site.baseurl}}/sign/">📅Запись на консультацию</a></nobr>
 </div>
 <!--
 <a href="{{site.baseurl}}/archive/"><nobr>📚Архив</nobr></a 💿💾📀💽🧲>
