Заменил nobr элементы на <span style="white-space: nowrap"> в navigation чтобы соответствовало стандартам HTML5. и убрал лишнюю строку в начале

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,13 +1,18 @@
 <div class="links scroll">
-</div>
-<div class="links scroll">
-        <nobr><a href="{{site.baseurl}}/">🧭Главная</a></nobr>
-        <nobr><a href="{{site.baseurl}}/cases/">💁‍♂️Отзывы</a></nobr>
-        <nobr><a href="{{site.baseurl}}/contacts/">📞Контакты</a></nobr>
-        <nobr><a href="{{site.baseurl}}/blog/">📖Заметки</a></nobr>
-        <nobr><a href="{{site.baseurl}}/archive/">📚Архив</a></nobr>
-        <nobr><a href="{{site.baseurl}}/memo/">💾Памятки</a></nobr>
-        <nobr><a href="{{site.baseurl}}/sign/">📅Запись на консультацию</a></nobr>
+        <span style="white-space: nowrap">
+          <a href="{{site.baseurl}}/">🧭Главная</a></span>
+        <span style="white-space: nowrap">
+          <a href="{{site.baseurl}}/cases/">💁‍♂️Отзывы</a></span>
+        <span style="white-space: nowrap">
+          <a href="{{site.baseurl}}/contacts/">📞Контакты</a></span>
+        <span style="white-space: nowrap">
+          <a href="{{site.baseurl}}/blog/">📖Заметки</a></span>
+        <span style="white-space: nowrap">
+          <a href="{{site.baseurl}}/archive/">📚Архив</a></span>
+        <span style="white-space: nowrap">
+          <a href="{{site.baseurl}}/memo/">💾Памятки</a></span>
+        <span style="white-space: nowrap">
+          <a href="{{site.baseurl}}/sign/">📅Запись на консультацию</a></span>
 </div>
 <!--
 <a href="{{site.baseurl}}/archive/"><nobr>📚Архив</nobr></a 💿💾📀💽🧲>
