--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,14 @@ layout: compress
         <!-- Load fontawesome here for faster loadtimes: https://stackoverflow.com/a/35880730/9523246 -->
         <script type="text/javascript"> (function() { var css = document.createElement('link'); css.href = 'https://use.fontawesome.com/releases/v5.11.0/css/all.css'; css.rel = 'stylesheet'; css.type = 'text/css'; document.getElementsByTagName('head')[0].appendChild(css); })(); </script>
 
+        <style>
+          span.rev { unicode-bidi:bidi-override; direction:rtl }
+          span.rev.surname:before { content:"вен" }
+          span.rev.surname:after { content:"кеБ" }
+          span.rev.firstname:before { content:"н" }
+          span.rev.firstname:after { content:"вИ" }
+        </style>
+
     </head>
 
     <body>
