--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@ layout: compress
 
       <br>
 
-      <h3 class="post-description">{{site.description}}</h3>
+      <!-- <h3 class="post-description">{{site.description}}</h3> -->
 
       {% include navigation.html %}
 
