добавил lang=ru в head в default шаблон чтобы соответствовать HTML5

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 layout: compress
 ---
 <!DOCTYPE html>
-<html prefix="og: http://ogp.me/ns#">
+<html lang="ru" prefix="og: http://ogp.me/ns#">
 
     <head>
         <meta property="og:image" content="{{site.url}}/assets/images/profile.jpg">
