--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,10 +1,9 @@
 ---
 layout: default
 ---
-
 {% if page.profile %}
     {% if page.profile.image %}
-      <img class="profile {{ page.profile.align }}"  width="33.33%" alt="Мое фото" src="{{ page.profile.image | prepend: '/assets/images/' | prepend: site.baseurl | prepend: site.url }}">
+      <img class="profile {{ page.profile.align }}" alt="Мое фото" src="{{ page.profile.image | prepend: '/assets/images/' | prepend: site.baseurl | prepend: site.url }}">
     {% endif %}
 {% endif %}
 
