--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,12 +6,26 @@ layout: compress
 
     <head>
         <meta charset="utf-8">
-        <meta content="width=device-width, initial-scale=1" name="viewport">
-
-        {% seo %}
-
+        <title>{{page.title}} | {{site.title}}</title>
+        <meta name="description" content="{{page.description}}" />
+        <meta property="og:title" content="{{page.title}}" />
+        <meta property="og:locale" content="ru_RU" />
+        <meta property="og:description" content="{{page.description}}" />
+        <meta property="og:url" content="{{page.url}}" />
+        <meta property="og:site_name" content="{{site.title}}" />
+        <meta property="og:type" content="website" />
         <meta property="og:image" content="{{site.url}}/assets/images/profile.jpg">
+        <!--<script type="application/ld+json"> {"@context":"https://schema.org","@type":"WebSite","description":"{{page.description}}","headline":"Улучшение взаимопонимания и эмпатия","name":"Улучшение взаимопонимания и эмпатия","url":"http://localhost/"}</script>-->
+
+        <link rel="stylesheet" href="/assets/css/main.css">
+        <link rel="canonical" href="{{page.url}}" />
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?">
+
         <link rel="stylesheet" href="{{site.baseurl}}/assets/css/main.css">
+        <meta content="width=device-width, initial-scale=1" name="viewport">
+        <meta name="generator" content="Jekyll v3.9.2" />
 
         {% include favicon.html %}
 
