изменил default шаблон -- добавил тег meta noindex для всех страниц, исключенных из sitemap.xml <meta name=robots content=noindex>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@ layout: null
 <html lang="ru" prefix="og: http://ogp.me/ns#">
 
     <head>
+        {% if page.sitemap.exclude == "yes" %}<meta name="robots" content="noindex">{% endif %}
         <meta charset="utf-8">
         <meta content="width=device-width, initial-scale=1" name="viewport">
 
