Переименовал раздел Заметки в Блог в меню навигации

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,7 +6,7 @@
         <span style="white-space: nowrap">
           <a href="{{site.baseurl}}/contacts/">📞Контакты</a></span>
         <span style="white-space: nowrap">
-          <a href="{{site.baseurl}}/blog/">📖Заметки</a></span>
+          <a href="{{site.baseurl}}/blog/">📖Блог</a></span>
         <span style="white-space: nowrap">
           <a href="{{site.baseurl}}/archive/">📚Архив</a></span>
         <span style="white-space: nowrap">
