--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,6 @@ layout: default
 </small></td></tr></table></p>
 -->
 
-
 {{content}}
 
 <hr>
@@ -26,6 +25,18 @@ layout: default
     отзыв на пост по этой ссылке
   </a></b>
 </small></p>
+
+<div class="PageNavigation">
+  {% if page.previous.url %}
+    <!-- <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a> -->
+    <a class="prev" href="{{page.previous.url}}">◀ Предыдущий</a>
+  {% endif %}
+  | 
+  {% if page.next.url %}
+    <!-- <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a> -->
+    <a class="next" href="{{page.next.url}}">Следующий ▶</a>
+  {% endif %}
+</div>
 
 <!-- Comments only for posts -->
 {% if page.path contains '_posts' %}
