--- a/assets/css/_sass/style.scss
+++ b/assets/css/_sass/style.scss
@@ -197,3 +197,27 @@ blockquote {
   span.rev.firstname:before { content:"н" }
   span.rev.firstname:after { content:"вИ" }
 */
+
+.PageNavigation {
+  text-align: center;
+}
+
+/*
+.PageNavigation {
+  //font-size: 14px;
+  display: block;
+  width: auto;
+  overflow: hidden;
+}
+
+.PageNavigation a {
+  display: block;
+  width: 50%;
+  float: left;
+  margin: 1em 0;
+}
+
+.PageNavigation .next {
+  text-align: right;
+}
+*/
