--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,7 @@ layout: default
     <!-- <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a> -->
     <a class="prev" href="{{page.previous.url}}">◀ Предыдущий</a>
   {% endif %}
-  | <a href="{{site.baseurl}}/random/">Случайный 🍀</a> |
+  | <a href="{{site.baseurl}}/rnd/">Случайный 🍀</a> |
   {% if page.next.url %}
     <!-- <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a> -->
     <a class="next" href="{{page.next.url}}">Следующий ▶</a>
