--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,12 +1,12 @@
 <div class="links scroll">
         <span style="white-space: nowrap">
+          <a href="{{site.baseurl}}/blog/">📖Читать блог</a></span>
+        <span style="white-space: nowrap">
           <a href="{{site.baseurl}}/">🧭Главная</a></span>
         <span style="white-space: nowrap">
           <a href="{{site.baseurl}}/cases/">💁‍♂️Отзывы</a></span>
         <span style="white-space: nowrap">
           <a href="{{site.baseurl}}/contacts/">📞Контакты</a></span>
-        <span style="white-space: nowrap">
-          <a href="{{site.baseurl}}/blog/">📖Блог</a></span>
         <span style="white-space: nowrap">
           <a href="{{site.baseurl}}/archive/">📚Архив</a></span>
         <span style="white-space: nowrap">
