Обновил слой post добавил сслыку на канал в телеграм и поправил предложение оставить отзыв о посте

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,12 +29,15 @@ layout: default
   {% endif %}
 </div>
 
+<p><small>Подписаться на новые посты: <a href="https://t.me/IvanBekRu" target="_blank" rel="noopener noreferrer">  В телеграм канале</a>   или   RSS</small></p>
+
 <p><small> Если вам нравятся мои посты, и вы хотите помочь мне сделать блог лучше,
-  <br>пожалуйста, оставьте
+  <br> напишите мне
   <b><a href="https://docs.google.com/forms/d/e/1FAIpQLSewVqwvSpXbR_aBf43fW9dMtb_tkTm8eW90JSv0cXazK0a_FQ/viewform?usp=pp_url&entry.1173564305={{ page.url | url_encode }}">
-    отзыв на пост по этой ссылке
+    о своем впечатлении по этой ссылке
   </a></b>
 </small></p>
+
 
 <hr>
 
