--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,10 +29,10 @@ layout: default
   {% endif %}
 </div>
 
-<p><small>Подписаться на новые посты: <a href="https://t.me/IvanBekRu" target="_blank" rel="noopener noreferrer">  В телеграм канале</a>   или   RSS</small></p>
+<p><small>🧲 Подписаться на новые посты: <a href="https://t.me/IvanBekRu" target="_blank" rel="noopener noreferrer"> 📱 В телеграм канале</a>   или   RSS</small></p>
 
 <p><small> Если вам нравятся мои посты, и вы хотите помочь мне сделать блог лучше,
-  <br> напишите мне
+  <br> 📝напишите мне
   <b><a href="https://docs.google.com/forms/d/e/1FAIpQLSewVqwvSpXbR_aBf43fW9dMtb_tkTm8eW90JSv0cXazK0a_FQ/viewform?usp=pp_url&entry.1173564305={{ page.url | url_encode }}">
     о своем впечатлении по этой ссылке
   </a></b>
