Пробую добавить подсказку к RSS под постами

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,7 +29,7 @@ layout: default
   {% endif %}
 </div>
 
-<p><small>🧲 Подписаться на новые посты: <a href="https://t.me/IvanBekRu" target="_blank" rel="noopener noreferrer"> 📱 В телеграм канале</a>   или   RSS</small></p>
+<p><small>🧲 Подписаться на новые посты: <a href="https://t.me/IvanBekRu" target="_blank" rel="noopener noreferrer"> 📱 В телеграм канале</a>   или   <a title="https://ivanbek.ru/feed.xml">RSS</a></small></p>
 
 <p><small> Если вам нравятся мои посты, и вы хотите помочь мне сделать блог лучше,
   <br> 📝напишите мне
