поменял в меню Главная на Обо мне

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,7 +2,7 @@
         <span style="white-space: nowrap">
           <a href="{{site.baseurl}}/blog/">📖Читать блог</a></span>
         <span style="white-space: nowrap">
-          <a href="{{site.baseurl}}/">🧭Главная</a></span>
+          <a href="{{site.baseurl}}/">🧭Обо мне</a></span>
         <span style="white-space: nowrap">
           <a href="{{site.baseurl}}/cases/">💁‍♂️Отзывы</a></span>
         <span style="white-space: nowrap">
