--- a/assets/css/_sass/variables.scss
+++ b/assets/css/_sass/variables.scss
@@ -13,7 +13,7 @@ $brand-color:      #0BA5BE;
 //#60c17d; #0BA5BE
 
 // Color scheme for light
-$body-bg: #f2f2f2;
+$body-bg: #FFFBF0;
 $projectbox: #92DAD9;
 //#cfe6a4
 $text-color: #333;
@@ -21,7 +21,7 @@ $text-color: #333;
 // Color scheme for dark modes
 $body-bg-dark: #061725;
 $projectbox-dark: lighten($body-bg-dark, 10%);
-$text-color-dark: #777;
+$text-color-dark: #919191;
 
 // Colour palette for project boxes
 $theme1: ("one",#388087),("two", #6FB3B8),("three",#BADFE7),("four",#C2EDCE),("five",#F6F6F2);
